# server/src/models/openapi.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  shareloop.openapi.yaml
-#   timestamp: 2026-07-05T12:05:36+00:00
+#   timestamp: 2026-07-05T12:06:43+00:00
 
 from __future__ import annotations
 
@@ -75,6 +75,7 @@ class UserProfile(ApiBaseModel):
     item_count: int = Field(..., alias='itemCount')
     rating_count: int = Field(..., alias='ratingCount')
     share_count: int | None = Field(None, alias='shareCount')
+    avatar_uuid: UUID | None = Field(None, alias='avatarUuid')
 
 
 class UserRatingDetail(ApiBaseModel):
